tests/NormalTests/paczka1/small_fuzzy/38538884.err
Error in line 3: 7Iq7Chf A921 988,0
Error in line 4: 7Iq7Chf A585 96,4
